--- a/update/news.txt
+++ b/update/news.txt
@@ -1,3 +1,13 @@
-Welcome to Evol update server.
-.
-Alpha testing.
+##0 Actual Release:##1 Beta1
+##0 Welcome in ##BEvol Online##b!
+##0 You can find every ##1rules##0 of ##BEvol Online##b at ##1http://www.evolonline.org/guide_rules.html
+
+
+##7 Season 1, Episode 1!
+
+##0 After months of hard work, the world of ##BEvol Online##b is open to the public for his first Beta Release.
+##0 This opening will be the start of a series of 3 Beta Releases which will be there to determinate the good and bad points of the chosen Gameplay.
+##0 We welcome you all to give us your thoughts on this, but also to be a part of this great adventure.
+
+##9-- Dearly yours, Reid.
+##9 January 2012
