update: Update news.

--- a/update/news.txt
+++ b/update/news.txt
@@ -1,3 +1,4 @@
+##9 Latest client version: ##6ManaPlus 1.2.1.22
 ##0 Actual Release:##1 Beta1
 ##0 Welcome in ##BEvol Online##b!
 ##0 You can find every ##1rules##0 of ##BEvol Online##b 
