--- a/update/news.txt
+++ b/update/news.txt
@@ -137,5 +137,6 @@
  
 ##9 -- Cheers, Reid.
 ##9 January 2012
-
-You can check out this page for older news entries: http://wiki.evolonline.org/news
+ 
+You can check out this page for older news entries:
+http://wiki.evolonline.org/news
