--- a/update/news.txt
+++ b/update/news.txt
@@ -1,4 +1,4 @@
-##9 Latest client version: ##6ManaPlus 1.3.2.3
+##9 Latest client version: ##6ManaPlus 1.3.3.17
 ##0 Actual Release: ##1Beta2.1
 ##0 Welcome to ##BEvol Online##b!
 ##0 You can find every ##1rules##0 of ##BEvol Online##b here:
@@ -6,6 +6,31 @@
  
  
 ##7 ##BThe adventure begins!##b
+ 
+ 
+##7 Spring time everybody!
+ 
+##0 Beta2.1 was a great success, more than what we thought it would be.
+##0 We are proud of this release and of the players too! Your bug
+##0 reports helped us a lot, as well as your feedbacks. Thank you!
+
+##0 We started working on Beta3 even before the launch of Beta2.1
+##0 because much needs to be done. We fixed all known in-game issues
+##0 and improved a lot of old content.
+
+##0 To sump up, Beta3 can be compared as a full balancing release, it'll
+##0 bring new weight and currency measures, which will offer a new game
+##0 experience to you all! We'll let you discover all of the other new
+##0 features and modifications by yourself!
+
+##0 Lastly, we think it is important for you to know that we spend a lot
+##0 of time trying to change our game art's license from GPLv2 to
+##0 CC BY-SA 3.0. This will help us develop much faster in the future.
+
+##0 Beta3 will soon be released, such as its news post! 
+ 
+##9 -- Cheers, Reid.
+##9 Mars 2013
  
  
 ##7 Finally, Beta2.1 is out!
