--- a/update/news.txt
+++ b/update/news.txt
@@ -1,4 +1,4 @@
-##9 Latest client version: ##6ManaPlus 1.3.4.14
+##9 Latest client version: ##6ManaPlus 1.3.6.23
 ##0 Actual Release: ##1Beta2.1
 ##0 Welcome to ##BEvol Online##b!
 ##0 You can find every ##1rules##0 of ##BEvol Online##b here:
@@ -6,6 +6,32 @@
 
 
 ##7 ##BThe adventure begins!##b
+
+
+##7 Get ready for summer!
+
+##0 Fellow players, we are pleased to inform you that during this year,
+##0 all of us worked hard on this project and also in real life, thus
+##0 most of our developers and contributors graduated! Congratulations
+##0 to all of them!
+
+##0 The change of license from GPLv2 to CC BY-SA 3.0 has made great
+##0 progress too! There are very few graphics left that are still GPLv2
+##0 and we're doing our best to get rid of these as soon as possible.
+
+##0 On top of that, we also continued working on our new website, we
+##0 hope you'll enjoy it as much as we do. Don't forget to register on
+##0 our forums too!
+
+##0 The Beta3 is coming very soon, so if you want a very special cookie,
+##0 please come and help us translate the last few sentences left.
+
+##0 On the ManaPlus development side, we are proud to announce the
+##0 release of that client on Debian and Ubuntu 13.10. Note that
+##0 http://manaplus.org/ is finally out too!
+
+##9 -- Regards, Alige.
+##9 June 2013
 
 
 ##7 Spring time everybody!
@@ -30,7 +56,7 @@
 ##0 Beta3 will soon be released, such as its news post!
 
 ##9 -- Cheers, Reid.
-##9 Mars 2013
+##9 March 2013
 
 
 ##7 Finally, Beta2.1 is out!
