--- a/update/news.txt
+++ b/update/news.txt
@@ -1,11 +1,33 @@
-##9 Latest client version: ##6ManaPlus 1.3.6.23
-##0 Actual Release: ##1Beta2.1
+##9 Latest client version: ##6ManaPlus 1.3.7.7
+##0 Actual Release: ##1Beta3
 ##0 Welcome to ##BEvol Online##b!
 ##0 You can find every ##1rules##0 of ##BEvol Online##b here:
 ##1 [@@http://www.evolonline.org/guide_rules.html|http://www.evolonline.org/guide_rules.html@@]
 
 
 ##7 ##BThe adventure begins!##b
+
+
+##7 ##7 Season 1, Episode 3!
+
+##0 Greetings to you all, fellow players! Welcome to this new version of
+##0 Evol Online! This third Beta release will maybe be followed by a
+##0 Beta3.1 if bugs are to be discovered, so don't hesitate to tell us
+##0 about anything you dislike in game. Then you may deserve a cookie...
+
+##0 Thanks to Kenny690, we made great progress on sound effects and more
+##0 will come! We also worked very hard on art, we for example added a
+##0 a new hairstyle, weapons are now visible, lots of icons were remade,
+##0 etc... Furthermore, new unit names got introduced such as Esperin
+##0 for the in-game currency or Florin as weight value. 
+
+##0 Last but not least, we did an incredible work on balancing the game,
+##0 this took us most of our time thus we think it'll bring a new game
+##0 experience to this adventure. We hope you'll enjoy this new version
+##0 of Evol Online, and remember, cookies are a source of life.
+
+##9 -- Regards, Alige.
+##9 July 2013
 
 
 ##7 Get ready for summer!
@@ -184,6 +206,8 @@
 ##9 -- Regards, Alige.
 ##9 August 2012
 
+
+##7 Some people just never stop working!
 
 ##0 Once more, a lot of work has been done, recently on the consistency
 ##0 and quality of the game. A lot of new graphics will be part of the
