localserver: add script for build server from sources.

--- a/localserver/README
+++ b/localserver/README
@@ -1,6 +1,7 @@
 Here located for LOCAL server usage ONLY.
 Can be unsecure to use this files in public or production server.
 
+build.sh          - build server from sources.
 givegm.sh         - give gm rights to first account created on server.
 initdb.sh         - initialize mariadb database.
 installconfigs.sh - install configurations into server data directory.
