localserver: Add updatedb script

--- a/localserver/README
+++ b/localserver/README
@@ -5,6 +5,7 @@ build.sh          - build server from sources.
 givegm.sh         - give gm rights to first account created on server.
 initdb.sh         - initialize mariadb database.
 installconfigs.sh - install configurations into server data directory.
+updatedb.sh       - update if need sql database
 
 See also http://wiki.evolonline.org/guidelines/installmariadb
          http://wiki.evolonline.org/guidelines/localserver
